fleshed in more of the UI and added tests for the service

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,22 +1,30 @@
 <form name="myForm" class="calculateForm" ng-submit="myForm.$valid && calculate()">
     <h2>Rate Calculator</h2>
         <div class="form-group">
-            <label for="targetIncome">Enter your target income:</label>
-            <input id="targetIncome" type="text" ng-model="data.targetIncome" required class="form-control" />
+            <label for="targetProfit">How much profit do you want to make?</label>
+	        <input id="targetProfit" type="text" ng-model="data.targetProfit" required class="form-control" />
+			<span class="help-block">After covering all of your expenses, how much money do you want to make per year?</span>
         </div>
         <div class="form-group">
             <label for="billableHoursPerWeek">How many hours per week will you bill?</label>
             <input id="billableHoursPerWeek" type="text" ng-model="data.billableHoursPerWeek" required class="form-control" />
+			<span class="help-block">Don't plan on being 100% billable!</span>
         </div>
         <div class="form-group">
             <label for="billableWeeksPerYear">How many weeks per year will you bill?</label>
             <input id="billableWeeksPerYear" type="text" ng-model="data.billableWeeksPerYear" required class="form-control" />
+			<span class="help-block">Consider vacation, conferences, holidays, sick time and anything else that will keep you out of the office.</span>
         </div>
         <div class="form-group">
-            <label for="monthlyExpenses">What are your monthly business *and* personal expenses?</label>
-            <input id="monthlyExpenses" type="text" ng-model="data.monthlyExpenses" required class="form-control"/>
+            <label for="monthlyBusinessExpenses">What are your monthly business expenses?</label>
+            <input id="monthlyBusinessExpenses" type="text" ng-model="data.monthlyBusinessExpenses" required class="form-control"/>
+			<span class="help-block">Examples: Rent, loans, credit cards, education, office supplies, legal expenses, insurance...</span>
         </div>
-
+        <div class="form-group">
+            <label for="monthlyPersonalExpenses">What are your monthly personal expenses?</label>
+            <input id="monthlyPersonalExpenses" type="text" ng-model="data.monthlyPersonalExpenses" required class="form-control"/>
+			<span class="help-block">Examples: Rent, mortgage, loans, credit cards, education, office supplies, insurance, gifts...</span>
+        </div>
         <button type="submit" ng-disabled="myForm.$invalid" class="btn btn-primary btn-block" style="margin-top:10px;">Calculate</button>
     </div>
 
