--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,34 +2,34 @@
     <h2>Rate Calculator</h2>
         <div class="form-group">
             <label for="targetProfit">How much profit do you want to make?</label>
-	        <input id="targetProfit" type="text" ng-model="data.targetProfit" required class="form-control" />
+	        <input id="targetProfit" type="number" step="5000" min="0" max="1000000"  ng-model="data.targetProfit" required class="form-control" />
 			<span class="help-block">After covering all of your expenses, how much money do you want to make per year?</span>
         </div>
         <div class="form-group">
             <label for="billableHoursPerWeek">How many hours per week will you bill?</label>
-            <input id="billableHoursPerWeek" type="text" ng-model="data.billableHoursPerWeek" required class="form-control" />
+            <input id="billableHoursPerWeek" type="number" min="0" max="80" step="1" ng-model="data.billableHoursPerWeek" required class="form-control" />
 			<span class="help-block">Don't plan on being 100% billable!</span>
         </div>
         <div class="form-group">
             <label for="billableWeeksPerYear">How many weeks per year will you bill?</label>
-            <input id="billableWeeksPerYear" type="text" ng-model="data.billableWeeksPerYear" required class="form-control" />
+            <input id="billableWeeksPerYear" type="number" min="1" max="52" step="1" ng-model="data.billableWeeksPerYear" required class="form-control" />
 			<span class="help-block">Consider vacation, conferences, holidays, sick time and anything else that will keep you out of the office.</span>
         </div>
         <div class="form-group">
             <label for="monthlyBusinessExpenses">What are your monthly business expenses?</label>
-            <input id="monthlyBusinessExpenses" type="text" ng-model="data.monthlyBusinessExpenses" required class="form-control"/>
+            <input id="monthlyBusinessExpenses" type="number" min="0" ng-model="data.monthlyBusinessExpenses" required class="form-control"/>
 			<span class="help-block">Examples: Rent, loans, credit cards, education, office supplies, legal expenses, insurance...</span>
         </div>
         <div class="form-group">
             <label for="monthlyPersonalExpenses">What are your monthly personal expenses?</label>
-            <input id="monthlyPersonalExpenses" type="text" ng-model="data.monthlyPersonalExpenses" required class="form-control"/>
+            <input id="monthlyPersonalExpenses" type="number" min="0" ng-model="data.monthlyPersonalExpenses" required class="form-control"/>
 			<span class="help-block">Examples: Rent, mortgage, loans, credit cards, education, office supplies, insurance, gifts...</span>
         </div>
         <button type="submit" ng-disabled="myForm.$invalid" class="btn btn-primary btn-block" style="margin-top:10px;">Calculate</button>
     </div>
 
     <div>
-        The calculated amount is: {{ calculatedAmount }}
+        The calculated amount is: ${{ calculatedAmount | number: 0}}
     </div>
 </form>
 
