--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,11 @@
     <h2>Rate Calculator</h2>
         <div class="form-group">
             <label for="targetProfit">How much profit do you want to make?</label>
-	        <input id="targetProfit" type="number" step="5000" min="0" max="1000000"  ng-model="data.targetProfit" required class="form-control" />
+			<div class="input-group">
+				<span class="input-group-addon">$</span>
+				<input id="targetProfit" type="number" step="5000" min="0" max="1000000"  ng-model="data.targetProfit" required class="form-control" />
+				<span class="input-group-addon">.00</span>
+			</div>
 			<span class="help-block">After covering all of your expenses, how much money do you want to make per year?</span>
         </div>
         <div class="form-group">
@@ -17,12 +21,20 @@
         </div>
         <div class="form-group">
             <label for="monthlyBusinessExpenses">What are your monthly business expenses?</label>
-            <input id="monthlyBusinessExpenses" type="number" min="0" ng-model="data.monthlyBusinessExpenses" required class="form-control"/>
+			<div class="input-group">
+				<span class="input-group-addon">$</span>
+	            <input id="monthlyBusinessExpenses" type="number" min="0" ng-model="data.monthlyBusinessExpenses" required class="form-control"/>
+				<span class="input-group-addon">.00</span>
+			</div>
 			<span class="help-block">Examples: Rent, loans, credit cards, education, office supplies, legal expenses, insurance...</span>
         </div>
         <div class="form-group">
             <label for="monthlyPersonalExpenses">What are your monthly personal expenses?</label>
-            <input id="monthlyPersonalExpenses" type="number" min="0" ng-model="data.monthlyPersonalExpenses" required class="form-control"/>
+			<div class="input-group">
+				<span class="input-group-addon">$</span>
+	            <input id="monthlyPersonalExpenses" type="number" min="0" ng-model="data.monthlyPersonalExpenses" required class="form-control"/>
+				<span class="input-group-addon">.00</span>
+			</div>
 			<span class="help-block">Examples: Rent, mortgage, loans, credit cards, education, office supplies, insurance, gifts...</span>
         </div>
         <button type="submit" ng-disabled="myForm.$invalid" class="btn btn-primary btn-block" style="margin-top:10px;">Calculate</button>
