--- a/app/css/style.less
+++ b/app/css/style.less
@@ -5,8 +5,8 @@ body {
 }
 
 .calculateForm {
-  width: 330px;
-  max-width: 330px;
+  width: 850px;
+  max-width: 850px;
   padding: 15px;
   margin: 0 auto;
 }
@@ -19,3 +19,29 @@ h1,h2,h3,h4,h5 {
 button {
   margin-bottom: 0px !important;
 }
+
+/* Sidebar modules for boxing content */
+.sidebar-module {
+  padding: 15px;
+  margin: 0 -15px 15px;
+}
+.sidebar-module-inset {
+  padding: 15px;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+}
+.sidebar-module-inset p:last-child,
+.sidebar-module-inset ul:last-child,
+.sidebar-module-inset ol:last-child {
+  margin-bottom: 0;
+}
+
+li {
+	padding-bottom: 5px;
+}
+
+hr {
+	margin-top: 0px;
+	margin-top: 20px;
+}
+
